<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_home"/>
    <item
        android:id="@+id/menu_submit_report"
        android:icon="@drawable/ic_add_report"
        android:title="@string/menu_submit_report"/>
    <item
        android:id="@+id/menu_history"
        android:icon="@drawable/ic_history"
        android:title="@string/menu_report_history"/>
    <item
        android:id="@+id/menu_notifications"
        android:icon="@drawable/ic_notifications"
        android:title="@string/menu_notifications"/>
    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/menu_settings"/>
</menu>